grammar.js
module.exports = grammar({
  name: 'naz',

  rules: {
    source_file: $ => repeat(choice(
      seq($.fragment, optional($.comment)),
      $.comment
    )),

    add: $ => /[0-9]a/,
    subtract: $ => /[0-9]s/,
    multiply: $ => /[0-9]m/,
    divide: $ => /[1-9]d/,
    modulo: $ => /[1-9]p/,
    arithmetic: $ => prec(2, choice(
      $.add,
      $.subtract,
      $.multiply,
      $.divide,
      $.modulo
    )),

    halt: $ => /[0-9]h/,
    negate: $ => /[0-9]n/,
    output: $ => /[0-9]o/,
    read: $ => /[0-9]r/,

    opcode_0: $ => "0x",
    opcode_1: $ => "1x",
    opcode_2: $ => "2x",
    opcode_3: $ => "3x",
    opcode: $ => choice($.opcode_0, $.opcode_1, $.opcode_2, $.opcode_3),

    function: $ => /[0-9]f/,
    function_write: $ => prec(2, seq($.opcode_1, $.function)),

    variable: $ => /[0-9]v/,
    variable_write: $ => prec(2, seq($.opcode_2, $.variable)),

    condition: $ => /[0-9][egl]/,
    conditional: $ => prec(2, seq($.opcode_3, $.variable, $.condition)),

    comment: $ => / *#.*/,

    fragment: $ => choice(
      $.arithmetic,
      $.function,
      $.function_write,
      $.variable,
      $.variable_write,
      $.conditional,
      $.opcode,
      $.halt,
      $.negate,
      $.output,
      $.read
    )
  }
});
